--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="module" src="./index.jsx"></script>
-    <link rel="stylesheet" href="./styles.css">
+    <!--<script type="module" src="./index.jsx"></script>-->
+    <script type="module" src="carousel/carousel.jsx"></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="app"></div>
 </body>
 </html>
